"ship" introduce, weapon block determine

--- a/index.html
+++ b/index.html
@@ -109,168 +109,8 @@
   </head>
 
   <body>
-    <div class="container-fluid d-flex justify-content-center mt-5">
-      <div class="p-2 bordershow">
-        <div class="row row_box">
-          <div class="col-md-auto fleet_box">
-            <button
-              class="select_block"
-              data-bs-toggle="modal"
-              data-bs-target="#shipselect"
-              type="button">
-              <img class="bg" src="" />
-              <img class="fr" src="" />
-              <img class="icon" src="ui/empty.png" />
-            </button>
-          </div>
-          <div class="col-md-auto fleet_box">
-            <button
-              class="select_block"
-              data-bs-toggle="modal"
-              data-bs-target="#weaponselect"
-              type="button">
-              <img class="bg" src="" />
-              <img class="fr" src="" />
-              <img class="icon" src="ui/icon_back.png" />
-            </button>
-          </div>
-          <div class="col-md-auto fleet_box">
-            <button
-              class="select_block"
-              data-bs-toggle="modal"
-              data-bs-target="#shipselect"
-              type="button">
-              <img class="bg" src="" />
-              <img class="fr" src="" />
-              <img class="icon" src="ui/icon_back.png" />
-            </button>
-          </div>
-          <div class="col-md-auto fleet_box">
-            <div class="select_block_skill">
-              <span class="skill_name">スキール1</span>
-              <span class="reload_value"></span>
-            </div>
-          </div>
-          <div class="col-md-auto fleet_box">
-            <div class="select_block_skill">
-              <span class="skill_name">スキール2</span>
-              <span class="reload_value"></span>
-            </div>
-          </div>
-          <div class="col-md-auto fleet_box">
-            <div class="select_block_skill">
-              <span class="skill_name">スキール3</span>
-              <span class="reload_value"></span>
-            </div>
-          </div>
-        </div>
-        <div class="row row_box">
-          <div class="col-md-auto fleet_box">
-            <button
-              class="select_block"
-              data-bs-toggle="modal"
-              data-bs-target="#shipselect"
-              type="button">
-              <img class="bg" src="" />
-              <img class="fr" src="" />
-              <img class="icon" src="ui/empty.png" />
-            </button>
-          </div>
-          <div class="col-md-auto fleet_box">
-            <button
-              class="select_block"
-              data-bs-toggle="modal"
-              data-bs-target="#weaponselect"
-              type="button">
-              <img class="bg" src="" />
-              <img class="fr" src="" />
-              <img class="icon" src="ui/icon_back.png" />
-            </button>
-          </div>
-          <div class="col-md-auto fleet_box">
-            <button
-              class="select_block"
-              data-bs-toggle="modal"
-              data-bs-target="#shipselect"
-              type="button">
-              <img class="bg" src="" />
-              <img class="fr" src="" />
-              <img class="icon" src="ui/icon_back.png" />
-            </button>
-          </div>
-          <div class="col-md-auto fleet_box">
-            <div class="select_block_skill">
-              <span class="skill_name">スキール1</span>
-              <span class="reload_value"></span>
-            </div>
-          </div>
-          <div class="col-md-auto fleet_box">
-            <div class="select_block_skill">
-              <span class="skill_name">スキール2</span>
-              <span class="reload_value"></span>
-            </div>
-          </div>
-          <div class="col-md-auto fleet_box">
-            <div class="select_block_skill">
-              <span class="skill_name">スキール3</span>
-              <span class="reload_value"></span>
-            </div>
-          </div>
-        </div>
-        <div class="row row_box">
-          <div class="col-md-auto fleet_box">
-            <button
-              class="select_block"
-              data-bs-toggle="modal"
-              data-bs-target="#shipselect"
-              type="button">
-              <img class="bg" src="" />
-              <img class="fr" src="" />
-              <img class="icon" src="ui/empty.png" />
-            </button>
-          </div>
-          <div class="col-md-auto fleet_box">
-            <button
-              class="select_block"
-              data-bs-toggle="modal"
-              data-bs-target="#weaponselect"
-              type="button">
-              <img class="bg" src="" />
-              <img class="fr" src="" />
-              <img class="icon" src="ui/icon_back.png" />
-            </button>
-          </div>
-          <div class="col-md-auto fleet_box">
-            <button
-              class="select_block"
-              data-bs-toggle="modal"
-              data-bs-target="#shipselect"
-              type="button">
-              <img class="bg" src="" />
-              <img class="fr" src="" />
-              <img class="icon" src="ui/icon_back.png" />
-            </button>
-          </div>
-          <div class="col-md-auto fleet_box">
-            <div class="select_block_skill">
-              <span class="skill_name">スキール1</span>
-              <span class="reload_value"></span>
-            </div>
-          </div>
-          <div class="col-md-auto fleet_box">
-            <div class="select_block_skill">
-              <span class="skill_name">スキール2</span>
-              <span class="reload_value"></span>
-            </div>
-          </div>
-          <div class="col-md-auto fleet_box">
-            <div class="select_block_skill">
-              <span class="skill_name">スキール3</span>
-              <span class="reload_value"></span>
-            </div>
-          </div>
-        </div>
-      </div>
+    <div id="fleet-board">
+      <fleet-container></fleet-container>
     </div>
 
     <div class="modal" id="shipselect" style="display: none">
