--- a/index.html
+++ b/index.html
@@ -66,6 +66,11 @@
       .data {
         font-size: 40px;
       }
+      .empty_btn {
+        width: 250px;
+        height: 60px;
+        margin: 10px;
+      }
       /*modal*/
       .modal-dialog {
         max-width: 65%;
