--- a/index.html
+++ b/index.html
@@ -39,6 +39,34 @@
         height: 84.8px;
         width: 84.8px;
         margin: 2px;
+        transition: 0.2s;
+      }
+      .select_block:hover {
+        transform: scale(1.2);
+        background-color: black;
+        box-shadow: 0px 0px 10px 10px rgba(0, 0, 0, 0.8);
+        opacity: 0.8;
+        z-index: 13;
+      }
+      .bg {
+        position: absolute;
+        top: 0px;
+        left: 0px;
+        width: 100%;
+        z-index: 10;
+      }
+      .fr {
+        position: absolute;
+        top: 0px;
+        left: 0px;
+        width: 100%;
+        z-index: 12;
+      }
+      .icon {
+        position: relative;
+        z-index: 11;
+        object-fit: scale-down;
+        padding: 1px;
       }
       .select_block_skill {
         /*div*/
@@ -86,30 +114,17 @@
         border: rgb(50, 50, 50);
         color: white;
         text-align: center;
+        transition: 0.2s;
+      }
+      .card_style:hover {
+        transform: scale(1.2);
+        background-color: black;
+        box-shadow: 0px 0px 10px 10px rgba(0, 0, 0, 0.8);
+        z-index: 13;
       }
       .item_container {
         position: relative;
         height: 84.8px;
-      }
-      .bg {
-        position: absolute;
-        top: 0px;
-        left: 0px;
-        width: 100%;
-        z-index: 10;
-      }
-      .fr {
-        position: absolute;
-        top: 0px;
-        left: 0px;
-        width: 100%;
-        z-index: 12;
-      }
-      .icon {
-        position: relative;
-        z-index: 11;
-        object-fit: scale-down;
-        padding: 1px;
       }
     </style>
   </head>
