--- a/index.html
+++ b/index.html
@@ -112,8 +112,10 @@
         width: 84.8px;
         background: rgb(50, 50, 50);
         border: rgb(50, 50, 50);
+        border-radius: 0;
         color: white;
         text-align: center;
+        overflow: hidden;
         transition: 0.2s;
       }
       .card_style:hover {
@@ -125,6 +127,9 @@
       .item_container {
         position: relative;
         height: 84.8px;
+      }
+      .card_txt {
+        white-space: nowrap;
       }
     </style>
   </head>
