--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
       <fleet-container></fleet-container>
     </div>
 
-    <div class="modal" id="shipselect" style="display: none">
+    <div class="modal" id="ship_modal" style="display: none">
       <div class="modal-dialog modal-xl mt-1 mw-75" id="shipselect_dialog">
         <div class="modal-content">
           <div class="modal-header">
@@ -161,11 +161,11 @@
       </div>
     </div>
 
-    <div class="modal" id="weaponselect" style="display: none">
-      <div class="modal-dialog modal-xl mt-1 mw-75" id="weaponselect_dialog">
+    <div class="modal" id="weapon_modal" style="display: none">
+      <div class="modal-dialog modal-xl mt-1 mw-75">
         <div class="modal-content">
           <div class="modal-header">
-            <h4 class="modal-title text-center" id="weaponselectlabel">
+            <h4 class="modal-title text-center">
               Select weapon
             </h4>
             <button
